# pocket-interpreter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.rs
include/: backend.hpp  compiler.hpp  interpreter.hpp
src/: backend.cpp  compiler.cpp  interpreter.cpp
test/: main.cpp
